[gd_scene load_steps=6 format=2]

[ext_resource path="res://Rooms/Pedestals/WeaponPedestal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Gameplay/weapon-obtained.wav" type="AudioStream" id=3]

[sub_resource type="CylinderShape" id=5]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3.55042, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -17.789, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotation"
length = 6.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0125, 0.3625, 2.6625, 3.0125, 3.35, 5.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0.85, 0 ), Vector3( 0, 0.9, 0 ), Vector3( 0, 0.85, 0 ), Vector3( 0, 0.05, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="WeaponPedestal" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Weapon" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Model" type="MeshInstance" parent="Weapon"]
transform = Transform( 1, 0, 0, 0, 0.952188, 0.305513, 0, -0.305513, 0.952188, 0, 3.55042, 0 )
skeleton = NodePath("../..")

[node name="PickupArea" type="Area" parent="Weapon"]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Weapon/PickupArea"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/rotation = SubResource( 3 )

[node name="WeaponPedestalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
